--- a/src/components/styles/ManageUsers.css
+++ b/src/components/styles/ManageUsers.css
@@ -369,3 +369,24 @@
     max-width: 100%;
   }
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Skapar en mörk overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Se till att den ligger över annat innehåll */
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+  max-width: 90%;
+}
